@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Tue Aug 15 03:29:29 CEST 2006
+// Thu Aug 17 18:49:06 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -66,11 +66,11 @@ namespace Mono.Cecil {
 		}
 
 		public bool IsSynchronized {
-			get { return (this as ICollection).IsSynchronized; }
+			get { return false; }
 		}
 
 		public object SyncRoot {
-			get { return (this as ICollection).SyncRoot; }
+			get { return this; }
 		}
 
 		public ExternTypeCollection (ModuleDefinition container) :
